...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

        <Button
            android:id="@+id/tsh_low_sugg"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:text="@string/see_suggestions"
            android:onClick="tshLow"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

        <Button
            android:id="@+id/tsh_high_sugg"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:text="@string/see_suggestions"
            android:onClick="tshHigh"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

        <Button
            android:id="@+id/cortisol_low_sugg"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:onClick="cortisolLow"
            android:text="@string/see_suggestions"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

        <Button
            android:id="@+id/cortisol_high_sugg"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:text="@string/see_suggestions"
            android:onClick="cortisolHigh"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

        <Button
            android:id="@+id/creatinine_low_sugg"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:onClick="creatinineLow"
            android:text="@string/see_suggestions"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

        <Button
            android:id="@+id/creatinine_high_sugg"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:text="@string/see_suggestions"
            android:onClick="creatinineHigh"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

        <Button
            android:id="@+id/glucose_low_sugg"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:onClick="glucoseLow"
            android:text="@string/see_suggestions"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

        <Button
            android:id="@+id/glucose_high_sugg"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:text="@string/see_suggestions"
            android:onClick="glucoseHigh"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

        <Button
            android:id="@+id/iron_low_sugg"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:onClick="ironLow"
            android:text="@string/see_suggestions"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

        <Button
            android:id="@+id/iron_high_sugg"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:onClick="ironHigh"
            android:text="@string/see_suggestions"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

        <Button
            android:id="@+id/test_low_sugg"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:text="@string/see_suggestions"
            android:onClick="testLow"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

        <Button
            android:id="@+id/estra_low_sugg"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:text="@string/see_suggestions"
            android:onClick="estraLow"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

        <Button
            android:id="@+id/estra_high_sugg"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:text="@string/see_suggestions"
            android:onClick="estraHigh"
...
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp" />

        <Button
            android:id="@+id/general_m_sugg"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:text="@string/see_suggestions"
            android:onClick="maleSugg"
...
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp" />

        <Button
            android:id="@+id/general_f_sugg"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="30dp"
            android:text="@string/see_suggestions"
...
