...

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_bloodOptimizer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="2"
                android:layout_margin="12dp"
                android:layout_marginRight="16dp"
...

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_workoutPlan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="2"
                android:layout_columnWeight="1"
                android:layout_margin="12dp"
                android:layout_marginLeft="16dp"
...
